Fixed Alignment of Enemy Panel

--- a/src/app/dprcalc/dprcalc.component.scss
+++ b/src/app/dprcalc/dprcalc.component.scss
@@ -55,6 +55,7 @@ hr {
 }
 
 .results {
+  align-self: flex-start;
   display: flex;
   flex-direction: column;
   align-items: center;
